--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,54 @@
 body {
     margin: 0;
-    padding: 0;
-    background-color: rgb(7, 7, 7);
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(50, 50, 50);
+}
+canvas {
+    box-shadow: 0px 0px 10px black;
+}
+
+#canvaspalette {
+    margin-top: 10px;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+td {
+    vertical-align: middle;
+    width: 100%;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;;
+}
+
+button {
+    width: 100%;
+}
+
+input, label, select {
+    margin-left: 20px;
+}
+
+.container {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#canvasContainer {
+    width: 75%;
+    height: 100%;
+    margin-left: 25%;
+    align-items: center;
+}
+
+#controlsContainer {
+    width: 25%;
+    height: 100%;
+    align-items: left;
+    background-color: rgb(200, 200, 200);
+    box-shadow: 0px 0px 10px black;
 }
